<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kmitl.project.surasee2012.eatrightnow.activity.AddEditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/food_name"
                android:textSize="18dp"
                app:layout_constraintEnd_toStartOf="@+id/foodNameEt"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/foodNameEt"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/textView13"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/food_calories"
                android:textSize="18dp"
                app:layout_constraintEnd_toStartOf="@+id/foodCalEt"
                app:layout_constraintTop_toBottomOf="@+id/foodNameEt" />

            <EditText
                android:id="@+id/foodCalEt"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/foodNameEt" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/calories"
                android:textSize="18dp"
                app:layout_constraintStart_toEndOf="@+id/foodCalEt"
                app:layout_constraintTop_toBottomOf="@+id/foodNameEt" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/favorite_food"
                android:textSize="18dp"
                app:layout_constraintEnd_toStartOf="@+id/foodCalEt"
                app:layout_constraintTop_toBottomOf="@+id/foodCalEt" />

            <Switch
                android:id="@+id/favSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="22dp"
                app:layout_constraintStart_toEndOf="@+id/textView15"
                app:layout_constraintTop_toBottomOf="@+id/foodCalEt" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/tag"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <CheckBox
                android:id="@+id/eggCb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="8dp"
                android:text="ไข่"
                app:layout_constraintStart_toStartOf="@+id/vegCb"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <CheckBox
                android:id="@+id/chicDuckCb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="ไก่, เป็ด"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <CheckBox
                android:id="@+id/porkCb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="หมู"
                app:layout_constraintStart_toEndOf="@+id/chicDuckCb"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <CheckBox
                android:id="@+id/beefCb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="8dp"
                android:text="เนื้อ"
                app:layout_constraintStart_toStartOf="@+id/vegCb"
                app:layout_constraintTop_toBottomOf="@+id/eggCb" />

            <CheckBox
                android:id="@+id/fishCb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="ปลา"
                app:layout_constraintStart_toEndOf="@+id/vegCb"
                app:layout_constraintTop_toBottomOf="@+id/chicDuckCb" />

            <CheckBox
                android:id="@+id/seafoodCb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="อาหารทะเลอื่น ๆ"
                app:layout_constraintStart_toEndOf="@+id/chicDuckCb"
                app:layout_constraintTop_toBottomOf="@+id/porkCb" />

            <CheckBox
                android:id="@+id/vegCb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="ผัก, ผลไม้"
                app:layout_constraintEnd_toStartOf="@+id/chicDuckCb"
                app:layout_constraintTop_toBottomOf="@+id/beefCb" />

            <CheckBox
                android:id="@+id/riceCb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="ข้าว"
                app:layout_constraintStart_toEndOf="@+id/vegCb"
                app:layout_constraintTop_toBottomOf="@+id/fishCb" />

            <CheckBox
                android:id="@+id/noodleCb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="เส้นก๋วยเตี๋ยว"
                app:layout_constraintStart_toEndOf="@+id/chicDuckCb"
                app:layout_constraintTop_toBottomOf="@+id/seafoodCb" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/favorite_restaurant"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/riceCb" />

            <Button
                android:id="@+id/clearFavResBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/delete_favorite_restaurant"
                app:layout_constraintEnd_toStartOf="@+id/pickFavResBtn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <Button
                android:id="@+id/pickFavResBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/choose_favorite_restaurant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/clearFavResBtn"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:id="@+id/foodResTv"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pickFavResBtn" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
